--- a/hamburger/index.html
+++ b/hamburger/index.html
@@ -16,7 +16,20 @@
             <ul>
                 <li>Linkki 1</li>
                 <li>Linkki 2</li>
-                <li>Linkki 3</li>
+                <li>Linkki 3</li><!DOCTYPE html>
+                <html lang="en">
+                <head>
+                    <meta charset="UTF-8">
+                    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+                    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                    <title>Document</title>
+                    <script src="code.js" defer></script>
+                </head>
+                <body>
+                   <input type="text" name="username" id="username" value="default">
+                   <button>OK</button>
+                </body>
+                </html>
             </ul>
         </div>
     </i>
