--- a/esimerkit/index.html
+++ b/esimerkit/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="code.js" defer></script>
+    <script src="codex.js" defer></script>
 </head>
 <body>
-   <input type="text" name="username" id="username" value="default">
-   <button>OK</button>
+    <form id="lomake">
+        <input type="text" name="username" id="username" value="default">
+        <button type="submit">OK</button>
+    </form>
+
+    <button id="show">Show all</button>
+   
 </body>
 </html>
