--- a/lasku/index.html
+++ b/lasku/index.html
@@ -8,7 +8,7 @@
     <script src="code.js" defer></script>
 </head>
 <body>
-    <form>
+    <form id="calc">
         <label for="num1">Number 1:</label>
         <input type="number" name="num1" id="num1"><br>
         <label for="num2">Number 2:</label>
@@ -17,11 +17,9 @@
         <label for="sum">+</label>
         <input type="radio" name="arit" id="sub" value="sub">
         <label for="sub">-</label><br>
-        <button>Calculate</button>
-        <h3>Tulos on </h3>
+        <button type="submit">Calculate</button>
+   
     </form>
-    <div id="result">
-
-    </div>
+    <h3 id="result">Tulos on </h3>
 </body>
 </html>
